--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="login">Login</string>
     <string name="forgot_password">Forgot password ?</string>
     <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
