--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,13 @@
     <string name="show_less">Show less</string>
     <string name="show_more">Show more</string>
     <string name="title_activity_drawer">JetPack Compose</string>
+    <string name="username">Username</string>
     <string name="enter_your_mail">Email</string>
     <string name="enter_your_password">Password</string>
     <string name="login">Login</string>
     <string name="forgot_password">Forgot password ?</string>
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
+    <string name="sign_up_dont_have_account_message">don\'t have an account ?</string>
+    <string name="sign_up_have_account_message">already have an account ?</string>
 </resources>
